fix Drawer being too small for its content

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -2487,29 +2487,25 @@ $rio-input-box-small-label-spacing-top: 0.5rem;
     pointer-events: auto;
     overflow: hidden;
 
-    display: flex;
-    align-items: stretch;
-
     // Create a stacking context, so the anchor content cannot interfere with
     // the drawer content. `position` is already set by `rio-component`.
     z-index: 0;
+
+    display: inline-grid;
+    & > * {
+        grid-row: 1;
+        grid-column: 1;
+    }
 }
 
 .rio-drawer-shade {
     pointer-events: none;
-
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
 
     transition: background-color 0.3s ease-in-out;
 }
 
 .rio-drawer-anchor {
     pointer-events: none;
-    flex-grow: 1;
 
     // Create a stacking context, so the anchor content cannot interfere with
     // the drawer content
@@ -2523,7 +2519,6 @@ $rio-input-box-small-label-spacing-top: 0.5rem;
 
     display: flex;
 
-    position: absolute;
     background-color: var(--rio-local-bg);
 
     // Create a stacking context, so the anchor content cannot interfere with
